recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:19: error: value -- is not a member of Int
    i--;
     ^